frontend/src/style.css
@import 'tailwindcss';
@custom-variant dark (&:where(.dark, .dark *));

body {
  margin: 0;
  font-family: Inter, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
}

:root {
  color-scheme: light;
}

:root.dark {
  color-scheme: dark;
}

* {
  box-sizing: border-box;
}

.dark input:not([type='radio']):not([type='checkbox']),
.dark select,
.dark textarea {
  color: rgb(241 245 249);
  background-color: rgb(30 41 59);
  border-color: rgb(51 65 85);
}

.dark input:not([type='radio']):not([type='checkbox'])::placeholder,
.dark textarea::placeholder {
  color: rgb(148 163 184);
}

.dark select option {
  color: rgb(241 245 249);
  background-color: rgb(30 41 59);
}

